--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,532 @@
+@font-face {
+ font-family: 'Poppins Extra Bold';
+ src: url('../fonts/Poppins-ExtraBold.ttf');
+}
 
+@font-face{
+ font-family: 'Poppins Light';
+ src: url('../fonts/Poppins-Light.ttf');
+}
+
+:root{
+ --cor-principal: #3546FF;
+ --cor-de-fundo-1 : #e7e8ee;
+ --cor-de-fundo-2: #DBDDED;
+ --cor-de-titulo: #1D1D1D;
+ --cor-de-texto: #575757;
+ --cor-da-caixa-de-texto: #C9CEFF;
+ --icone-btn-modo-escuro: '\eb94'
+}
+
+.modo-escuro:root{
+  --cor-principal: #0B6FFF;
+  --cor-de-fundo-1: #1D1D1F;
+  --cor-de-fundo-2: #151515;
+  --cor-de-titulo: #B6B6B6;
+  --cor-de-texto: #CFCFCF;
+  --cor-da-caixa-de-texto:  #495768;
+  --icone-btn-modo-escuro: '\ec34'
+}
+
+@media(prefers-color-scheme: dark){
+ :root {
+  --cor-principal: #0B6FFF ;
+  --cor-de-fundo-1: #1D1D1F;
+  --cor-de-fundo-2: #151515;
+  --cor-de-titulo: #B6B6B6;
+  --cor-de-texto: #CFCFCF;
+  --cor-da-caixa-de-texto: #495768;
+  --icone-btn-modo-escuro: '\ec34' 
+   }
+}
+
+
+.abertura{
+ position: fixed;
+ top: 0;
+ left: 0;
+ width: 100%;
+ height: 100%;
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ flex-direction: column;
+ gap: 20px;
+ color: var(--cor-de-texto);
+ background: var(--cor-de-fundo-1);
+ z-index: 1000;
+ -webkit-animation: FadeOut .5s ease-in-out;
+ -o-animation: FadeOut .5s ease-in-out;
+ animation: FadeOut .5s ease-in-out;
+ -webkit-animation-delay: 1.55s;
+ -moz-animation-delay: 1.55s;
+ -o-animation-delay: 1.55s;
+ animation-delay: 1.55s;
+}
+
+@-webkit-keyframes FadeOut {
+ from { opacity: 1; }
+ to { opacity: 0; }
+}
+@-o-keyframes FadeOut {
+ from { opacity: 1; }
+ to { opacity: 0; }
+}
+@-moz-keyframes FadeOut {
+ from { opacity: 1; }
+ to { opacity: 0; }
+}
+@keyframes FadeOut {
+ from { opacity: 1; }
+ to { opacity: 0; }
+}
+
+.abertura .logo{
+ height: 80px;
+ width: 80px;
+ -webkit-border-radius: 1rem;
+ -moz-border-radius: 1rem;
+ border-radius: 1rem;
+ display: inline-flex;
+ align-items: center;
+ justify-content: center;
+}
+
+.abertura .desenvolvedor{
+ position: absolute;
+ bottom: 30px;
+}
+
+mark{
+ background: transparent;
+ color: var(--cor-principal);
+}
+
+html{
+ scroll-behavior: smooth
+}
+
+body{
+ display: flex;
+ align-items: center;
+ flex-direction: column;
+ background: var(--cor-de-fundo-1);
+ font-family: 'Poppins Extra Bold', sans-serif;
+ -webkit-user-select: none;
+ -moz-user-select: none;
+ -ms-user-select: none;
+ user-select: none;
+ margin: 0;
+ padding: 0;
+}
+
+*{
+ -webkit-box-sizing: border-box;
+ -moz-box-sizing: border-box;
+ box-sizing: border-box;
+}
+
+ h1,h2{
+ color: var(--cor-de-titulo);
+}
+
+h4{
+ color: var(--cor-de-texto);
+ font-family: 'Poppins Light', sans-serif;
+ font-size: 1rem;
+}
+
+.app{
+ margin-top: 60px;
+ padding: 20px 15px;
+ display: flex;
+ display: flex;
+ align-items: center;
+ flex-direction: column;
+}
+
+.app-bar{
+  position: fixed;
+  width: 100%;
+  height: 50px;
+  left: 0;
+  top: 0;
+  display: flex;
+  align-items: center;
+  gap: 0 10px;
+  background: var(--cor-principal);
+  color: #eee;
+  padding: 0 20px;
+  -webkit-box-shadow: 0 5px 10px #00000035;
+  -moz-box-shadow: 0 5px 10px #00000035;
+  box-shadow: 0 5px 10px #00000035; 
+  font-family: 'Poppins Light';
+  z-index: 2;
+}
+
+.app-bar p{
+ width: 100%;
+}
+
+.app-bar i#btn-modo-escuro::before{
+ content: var(--icone-btn-modo-escuro);
+}
+
+.app .apresentacao h1{
+ width: 100%;
+ display: flex;
+ flex-direction: column;
+ font-size: 2rem;
+ margin-bottom: 60px;
+}
+
+
+.app .apresentacao .ilustracao{
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ width: 100%;
+ margin: 100px 0 80px 0;
+}
+
+.app .apresentacao .ilustracao img{
+ width: 100%;
+ max-width: 400px;
+}
+
+.apresentacao .flexbox{
+ display: flex;
+ align-items: center;
+ width: 100%;
+}
+
+.apresentacao .flexbox button{
+  background: var(--cor-principal);
+  height: 45px;
+  width: 150px;
+  border: none;
+  text-transform: uppercase;
+  -webkit-border-radius: .3rem;
+  -moz-border-radius: .3rem;
+  border-radius: .3rem;
+  color: #eee;
+  font-size: .85rem;
+}
+
+
+.app .personalizacao{
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ flex-direction: column;
+ background: var(--cor-de-fundo-2);
+ padding: 15px;
+ -webkit-border-radius: 1rem;
+ -moz-border-radius: 1rem;
+ border-radius: 1rem;
+ color: #888; 
+ margin: 150px 0;
+ max-width: 450px;
+}
+
+.conteudo,
+.cor-principal,
+.upload-logo{
+ width: 100%;
+}
+
+.app .personalizacao h2{
+ font-size: 1.5rem;
+ text-align: center;
+ text-transform: uppercase
+}
+
+.app .caixa-de-texto{
+ display: flex;
+ align-items: center;
+ justify-content: space-between;
+ width: 100%;
+ height: 50px;
+ font-size: 1rem;
+ overflow: hidden;
+}
+
+.app .caixa-de-texto label{
+ width: 100%;
+}
+.app .caixa-de-texto input{
+ width: 100%;
+ height: 100%;
+ background: var(--cor-da-caixa-de-texto); 
+ color: var(--cor-de-texto);
+ padding: 15px;
+ border: none;
+ outline: none;
+ font-family: 'Poppins Light', sans-serif;
+ font-weight: bold;
+ -webkit-border-radius: .5rem;
+ -moz-border-radius: .5rem;
+ border-radius: .5rem;
+}
+
+.app .caixa-de-texto input:hover,
+.app .personalizacao .label-file:active{
+ -ms-filter: invert(10%);
+ filter: invert(10%);
+}
+
+.personalizacao button{
+ display: inline-flex;
+ align-items: center;
+ justify-content: center;
+ width: 100%;
+ height: 45px;
+ -webkit-border-radius: 2rem;
+ -moz-border-radius: 2rem;
+ border-radius: 2rem;
+ background: var(--cor-principal);
+ font-size: .85rem;
+ color: #eee;
+ border: none ;
+ -webkit-box-shadow: 0 0 10px #00000035;
+ -moz-box-shadow: 0 0 10px #00000035;
+ box-shadow: 0 0 10px #00000035;
+ text-transform: uppercase;
+ margin-top: 70px;
+ gap: 10px
+}
+
+.personalizacao button:active{
+ -webkit-box-shadow:  0 0 0 #00000035;
+ -moz-box-shadow:  0 0 0 #00000035;
+ box-shadow:  0 0 0 #00000035;
+ -ms-filter: invert(10%);
+ filter: invert(10%);
+}
+
+
+dialog.modal[open]{
+   font-family: 'Poppins Light', sans-serif;
+   position: fixed;
+   left: 0;
+   top: 0;
+   display: flex;
+   justify-content: center;
+   width: 100%;
+   height: 100%;
+   border: none;
+   background: #00000095;
+   -webkit-box-sizing: border-box;
+   -moz-box-sizing: border-box;
+   box-sizing: border-box;
+   padding: 30px;
+   backdrop-filter: blur(5px);
+   z-index: 1000;
+}
+
+@keyframes modal{
+  from{
+   -webkit-transform: translateY(-50%);
+   -moz-transform: translateY(-50%);
+   -ms-transform: translateY(-50%);
+   -o-transform: translateY(-50%);
+   transform: translateY(-20%) scale(0.5);
+   opacity: 0;
+  }
+}
+
+dialog.modal form{
+  width: 100%;
+  background: var(--cor-de-fundo-2);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 20px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-border-radius: 1.5rem;
+  -moz-border-radius: 1.5rem;
+  border-radius: 1.5rem;
+  position: relative;
+  padding-top: 90px;
+  overflow: hidden;
+  gap: 30px;
+   -webkit-animation: modal .3s ease-in;
+   -o-animation: modal .3s ease-in;
+   animation: modal .3s ease-in;
+   top: 0;
+   height: max-content;
+   max-width: 350px;
+   -webkit-user-select: none;
+   -moz-user-select: none;
+   -ms-user-select: none;
+   user-select: none;
+}
+
+dialog.modal form header{
+ width: 100%;
+ left: 0;
+ top: 0;
+ position: absolute;
+ background: var(--cor-principal);
+ text-align: center;
+ color: #eee;
+ text-transform: uppercase
+}
+
+dialog.modal #qrcode canvas{
+   -webkit-border-radius: 1rem;
+   -moz-border-radius: 1rem;
+   border-radius: 1rem;
+}
+
+dialog.modal form .acoes{
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  width: 100%;
+  gap: 10px
+}
+
+dialog.modal form .acoes button{
+ all: unset;
+ display: inline-flex;
+ align-items: center;
+ justify-content: center;
+ gap: 5px;
+ text-transform: uppercase;
+ height: max-content;
+ width: max-content;
+ padding: 10px 15px;
+ -webkit-border-radius: 2rem;
+ -moz-border-radius: 2rem;
+ border-radius: 2rem;
+ -webkit-user-select: none;
+ -moz-user-select: none;
+ -ms-user-select: none;
+ user-select: none;
+ color: var(--cor-de-texto);
+ font-size: .8rem;
+ font-weight: bold;
+ background: var(--cor-de-fundo-2);
+}
+
+dialog.modal form .acoes button:active{
+ filter: invert(10%);
+ -webkit-transform: scale(.95);
+ -moz-transform: scale(.95);
+ -ms-transform: scale(.95);
+ -o-transform: scale(.95);
+ transform: scale(.95);
+}
+
+dialog.modal form .acoes button.baixar{
+  background: var(--cor-principal)!important;
+  color: #eee;
+}
+
+
+.upload-logo{
+ width: 100%;
+}
+
+
+.paleta{
+ display: flex;
+ flex-wrap: wrap;
+ gap:0
+}
+
+.paleta span{
+ display: inline-flex;
+ align-items: center;
+ justify-content: center;
+ width: 30px;
+ height: 30px;
+ gap:0;
+ line-height: 0;
+ color: #fff;
+}
+
+.paleta span.selecionada::after{
+  content: '';
+  height: 10px;
+  width: 5px;
+  border-left: 1px solid #fff;
+  border-top: 1px solid #fff;
+  -webkit-transform: rotate(-135deg);
+  -moz-transform: rotate(-135deg);
+  -ms-transform: rotate(-135deg);
+  -o-transform: rotate(-135deg);
+  transform: rotate(-135deg);
+}
+
+.label-file{
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ flex-direction: column;
+ font-size: .75rem;
+  width: 150px;
+  height: 150px;
+  background: var(--cor-da-caixa-de-texto);
+  color: var(--cor-de-texto);
+  -webkit-border-radius: .5rem;
+  -moz-border-radius: .5rem;
+  border-radius: .5rem;
+  margin: auto;
+  text-align: center;
+  padding: 10px;
+  position: relative;
+  overflow: hidden;
+}
+.label-file input[type*="file"]{
+  display: none;
+}
+
+.label-file i.bxs-file-image{
+  font-size: 5rem;
+}
+
+.label-file i.bx-x{
+ position: absolute;
+ right: 5px;
+ top: 5px;
+ font-size: 1.4rem;
+ -webkit-border-radius: 20px;
+ -moz-border-radius: 20px;
+ border-radius: 20px;
+ background: var(--cor-de-fundo-1);
+ display: none;
+}
+
+.label-file #imagem-preview{
+ position: absolute;
+ top: 0;
+ left: 0;
+ width: 100%;
+ height: 100%;
+ object-fit: cover;
+ display: none;
+ background: var(--cor-da-caixa-de-texto);
+}
+
+
+footer{
+ width: 100%;
+ height: 180px;
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ flex-direction: column ;
+ background: var(--cor-principal);
+ color: #eee;
+ border-top-left-radius: 1rem;
+ border-top-right-radius: 1rem;
+}
+
+footer h2{
+ color: inherit;
+}
